# DeepOrder-V2-lagacy

./: .env.example  .gitignore  Makefile  PROGRESS.md  README.md  bhc-menu-import-data.json  dominos-menu-import-data.json  hongkongbanjeom-menu-import-data.json  package-lock.json  package.json  temp.txt
DeepOrder KDS_files/: client  main.tsx
deeporder-backend/: .env.example  README.md  pyproject.toml
deeporder-backend/app/: __init__.py  auth.py  config.py  database.py  main.py  models.py  orders.py  schemas.py
deeporder-backend/tests/: test_adapter_registry.py  test_address_api.py  test_admin_users_api.py  test_auth_api.py  test_auth_models.py  test_kds_auth_api.py  test_kds_my_tasks_api.py  test_kds_order_actions_api.py  test_kds_staff_api.py  test_kds_store_api.py  test_mock_delivery_adapter.py  (+2 more)
docs/: README.md  api.md  architecture.md  deeporder-direction-decision.md
kds-app/: README.md
kds-web/: README.md  components.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
mock-delivery-api/: README.md  pyproject.toml
mock-delivery-api/app/: __init__.py  catalog.py  config.py  console.py  console_api.py  database.py  main.py  mock_orders.py  models.py  sample_orders.py  schemas.py
mock-delivery-api/app/static/: console.css  console.js
mock-delivery-api/app/templates/: console.html
mock-delivery-api/tests/: test_mock_orders.py
mock-delivery-console/: .env.example  README.md  eslint.config.mjs  index.html  package.json  tsconfig.app.json  vite.config.ts
scripts/: smoke_kds_e2e.py  start_deeporder.command  start_deeporder.md
(+255 files in other folders)
